# random

boardgames/: .gitignore  README.md  conftest.py  mypy.ini  pyproject.toml  pytest.ini
boardgames/boardgames/turingmachine/: base.hy  card.hy  log.hy  main.hy  solve.hy  subcard.hy  test_board.hy  test_subcard.hy
llm/: pyproject.toml
llm/llm/: gpt.py  tokenizer.py  train.py
